--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
   <meta name="description" content="The superior peer to peer meme coin" />
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   <title>Dobscoin</title>
+  <!-- favicon -->
+  <link rel="shortcut icon" type="image/jpg" href="https://firebasestorage.googleapis.com/v0/b/ethresources-1ed10.appspot.com/o/82625835%20(1).png?alt=media&token=9f448b45-57e9-4827-b085-fc6ce7dea084"/>
 </head>
 
 <body>
